--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,7 @@ project(projeto_gestao_de_eventos C)
 
 set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_C_STANDARD 11)
-
+set(RESOURCE_FILES resources/resources.rc)
 
 
 add_executable(CreatePDF main.c)
@@ -18,8 +18,8 @@ add_executable(projeto_gestao_de_eventos
         usuario.h
         venda.c
         venda.h
-        evento.c
-        evento.h
+        evento/evento.c
+        evento/evento.h
         menu.c
         menu.h
         venda_detalhes.c
@@ -28,6 +28,7 @@ add_executable(projeto_gestao_de_eventos
         login.h
         variaveis_compartilhadas.c
         variaveis_compartilhadas.h
-        components.c
-        components.h
+        components/components.c
+        components/components.h
+        ${RESOURCE_FILES}
 )
